--- a/index.html
+++ b/index.html
@@ -27,15 +27,24 @@
             // .then(resposta => JSON.stringify(resposta))
             // .then (resposta=> JSON.parse(resposta))
             .then(resposta => {
-                const produto=`
-                <p>ID: ${resposta.id}</p>
-                <p>Descrição: ${resposta.descricao}</p>
-                <p>Preço: ${resposta.preco}</p>
-                `
-                document.querySelector('#resposta').innerHTML = produto;
-                
+
+                document.querySelector('#resposta').innerHTML = "";
+
+                for(let i = 0; i < resposta.length; i++) {
+
+                    const ul = document.createElement("ul");
+                    const produto =`
+                    <li>ID: ${resposta[i].id}</li>
+                    <li>Descrição: ${resposta[i].descricao}</li>
+                    <li>Preço: ${resposta[i].preco}</li>
+                    `
+                    
+                    document.querySelector('#resposta').appendChild(ul).innerHTML = produto;
+                }
+
             });
         })
+
     </script>
 </body>
 
