--- a/create-com-post.html
+++ b/create-com-post.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atualização de produto</title>
+    <title>Cadastro de produto</title>
 </head>
 <body>
     <div id="resposta"></div>
-
+    
     <form action="" method="post">
         <label for="id">ID:</label> 
-        <input type="text" id="id"><br>
+        <input type="text" id="id" disabled><br>
 
         <label for="descricao">Descrição:</label>
         <input type="text" id="descricao"><br>
@@ -21,16 +21,14 @@
         <label for="imagem">Imagem:</label>
         <input type="text" id="imagem"><br>
 
-        <button type="button" id="btnAtualizar">Atualizar</button>
+        <button type="button" id="btnCadastrar">Cadastrar</button>
     </form>
 
     <div id="listaProdutos"></div>
 
     <script>
-        document.querySelector('#btnAtualizar').addEventListener('click',
-        () => {
+        document.querySelector('#btnCadastrar').addEventListener('click', () => {
 
-            const id = document.querySelector('#id').value;
             const dados = {
                 'id': null,
                 'descricao': document.querySelector('#descricao').value,
@@ -38,8 +36,8 @@
                 'imagem': document.querySelector('#imagem').value
             };
 
-            fetch(`http://localhost:3000/produtos/$(id)`, {
-                method: 'PUT', 
+            fetch(`http://localhost:3000/produtos/`, {
+                method: 'POST', 
                 headers: {
                     'Content-type': 'application/json'
                 },
@@ -47,8 +45,7 @@
             })
                 .then(response => {
                     if (response.ok) {
-                        document.querySelector('#resposta').innerHTML = 
-                            'Produto atualizado!'
+                        document.querySelector('#resposta').innerHTML = 'Produto Cadastrado!';
                     }
                 })
 
@@ -57,7 +54,7 @@
         });
 
         function getProdutos() {
-            const requisicao = new Request('http://localhost:3000/Produtos', {
+            fetch('http://localhost:3000/Produtos', {
             method: 'GET',
             headers: {
                 'Content-type': 'application/json'
