Começando a estilizar as páginas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="resposta"></div>
 
     <script>
-        const requisicao = new Request('http://localhost:3000/Produtos', {
+        const requisicao = new Request('http://localhost:3000/produtos', {
             method: 'GET',
             headers: {
                 'Content-type': 'application/json'
