--- a/atualiza-produtos.html
+++ b/atualiza-produtos.html
@@ -57,7 +57,7 @@
         });
 
         function getProdutos() {
-            const requisicao = new Request('http://localhost:3000/Produtos', {
+            const requisicao = new Request('http://localhost:3000/produtos', {
             method: 'GET',
             headers: {
                 'Content-type': 'application/json'
