--- a/create-com-post.html
+++ b/create-com-post.html
@@ -54,7 +54,7 @@
         });
 
         function getProdutos() {
-            fetch('http://localhost:3000/Produtos', {
+            fetch('http://localhost:3000/produtos', {
             method: 'GET',
             headers: {
                 'Content-type': 'application/json'
@@ -70,6 +70,7 @@
 
                     const ul = document.createElement("ul");
                     const img = document.createElement('img');
+                    img.setAttribute('height', '50');
 
                     ul.appendChild(document.createElement('li')).innerHTML = resposta[i].id;
                     ul.appendChild(document.createElement('li')).innerHTML = resposta[i].descricao;
