--- a/create-com-post.html
+++ b/create-com-post.html
@@ -26,6 +26,8 @@
 
     <div id="listaProdutos"></div>
 
+    <script src="./assets/scripts/scripts.js"></script>
+
     <script>
         document.querySelector('#btnCadastrar').addEventListener('click', () => {
 
