--- a/update-com-put.html
+++ b/update-com-put.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="./">Home</a>
+        <!-- <a href="./">Home</a> -->
         <h1>Update com PUT</h1>
     </header>
 
@@ -42,6 +42,7 @@
     </form>
 
     <div id="listaProdutos"></div>
+    </div>
 
     <script src="./assets/scripts/scripts.js"></script>
 
