--- a/update-com-put.html
+++ b/update-com-put.html
@@ -18,12 +18,12 @@
     <form action="" method="post">
         <h1>Alteração de Produtos</h1>
         <div class="caixa-form">
-            <label for="id" class="label-caixa">ID</label>
+            <label for="id" class="label-caixa" disabled>ID</label>
             <input type="text" id="id" placeholder="digite o ID do produto"><br>
         </div>
 
         <div class="caixa-form">
-            <label for="descricao" class="label-caixa">Descrição</label>
+            <label for="descricao" class="label-caixa" disabled>Descrição</label>
         <input type="text" id="descricao" placeholder="digite a descrição do produto"><br>
         </div>
 
