Terminando de Estilizar a tabela de lista de produtos

--- a/update-com-put.html
+++ b/update-com-put.html
@@ -42,7 +42,6 @@
     </form>
 
     <div id="listaProdutos"></div>
-    </div>
 
     <script src="./assets/scripts/scripts.js"></script>
 
@@ -51,24 +50,9 @@
         // Desafio 1
         document.addEventListener('click', event => {
 
-            if (event.target.classList.contains('produto')) {
+            if (event.target.closest('ul').classList.contains('produto')) {
 
-                const elementoBase = event.target;
-
-                document.querySelector('input#id').value = elementoBase.querySelector('[data-produto="id"]').innerHTML;
-
-                document.querySelector('input#descricao').value = elementoBase.querySelector('[data-produto="descricao"]').innerHTML;
-
-                document.querySelector('input#preco').value = elementoBase.querySelector('[data-produto="preco"]').innerHTML;
-
-                document.querySelector('input#imagem').value = elementoBase.querySelector('[data-produto="imagem"]').getAttribute('src').split("images/").pop();
-
-                checaInputs(); // Desafio 2
-
-                // Complemento desafio 1
-            } else if (event.target.parentElement.classList.contains('produto')) {
-
-                const elementoBase = event.target.parentElement;
+                const elementoBase = event.target.closest('ul');
 
                 document.querySelector('input#id').value = elementoBase.querySelector('[data-produto="id"]').innerHTML;
 
@@ -79,7 +63,9 @@
                 document.querySelector('input#imagem').value = elementoBase.querySelector('[data-produto="imagem"]').getAttribute('src').split("images/").pop();
 
                 checaInputs(); // Desafio 2
-            }
+
+            } 
+
         });
 
         // Desafio 2
