--- a/update-com-put.html
+++ b/update-com-put.html
@@ -9,15 +9,26 @@
 
 <body>
     <header>
-        <!-- <a href="./">Home</a> -->
-        <h1>Tema do site</h1>
-        <div id="btn-slider" class="bts bts-base">
-        <div class="bts bts-slider"></div>
-    </div>
-        <h1>Update com PUT</h1>
+        <nav>
+            <div class="parent-box">
+                <div class="header-link">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./create-com-post.html">Create</a></li>
+                    <li><a href="./delete-com-delete.html">Delete</a></li>
+                    <li><a href="./atualiza-produtos.html">Atualiza</a></li>
+                    <div>
+                        <h1 class="texto-tema">Tema do site</h1>
+                    </div>
+                    <div id="btn-slider" class="bts bts-base">
+                        <div class="bts bts-slider"></div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div>
+            <h1>Update com PUT</h1> 
+        </div>
     </header>
-
-    
 
     <div id="resposta"></div>
 
