--- a/delete-com-delete.html
+++ b/delete-com-delete.html
@@ -9,75 +9,33 @@
 
 <body>
     <header>
-        <a href="./">Home</a>
-        <h1>Delete com DELETE</h1> 
+        <nav>
+            <div class="parent-box">
+                <div class="header-link">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./create-com-post.html">Create</a></li>
+                    <li><a href="./delete-com-delete.html">Delete</a></li>
+                    <li><a href="./update-com-put.html">Update</a></li>
+                    <li><a href="./read-com-get.html">Read</a></li>
+                    <div>
+                        <h1 class="texto-tema">Tema do site</h1>
+                    </div>
+                    <div id="btn-slider" class="bts bts-base">
+                        <div class="bts bts-slider"></div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div>
+            <h1>DELETE com Delete</h1> 
+        </div>
     </header>
     
     <div id="listaProdutos"></div>
 
-    <script src="./assets/scripts/scripts.js"></script>
+    <script src="./assets/scripts/styles.js"></script>
+    <script type="module" src="./assets/scripts/update-com-put.js"></script>
+    <script src="./assets/scripts/botao-slider.js"></script>
 
-    <script>
-        
-        document.addEventListener('click', event => {
-
-            if(event.target.classList.contains('botao-delete')) {
-
-                fetch(`http://localhost:3000/produtos/${event.target.value}`, {
-                    method: 'DELETE',
-                    headers: {
-                        'Content-type' : 'application/json'
-                    }
-                })
-                .then(resposta => {
-                    if(resposta.ok) {
-                        alert('Produto Apagado!');
-                        location.reload();
-                    }
-                })
-
-            }
-        });
-
-        fetch('http://localhost:3000/produtos/', {
-            method: 'GET',
-            headers: {
-                'Content-type': 'application/json'
-            }
-        })
-            .then(resposta => resposta.json())
-            .then(resposta => {
-
-                document.querySelector('#listaProdutos').innerHTML = "";
-
-                for(let i = 0; i < resposta.length; i++) {
-
-                    const ul= document.createElement('ul');
-                    ul.classList.add('produto');
-
-                    const img = document.createElement('img');
-                    img.setAttribute('height', '50');
-
-                    ul.appendChild(document.createElement('li')).innerHTML = resposta[i].id;
-                    ul.appendChild(document.createElement('li')).innerHTML = resposta[i].descricao;
-                    ul.appendChild(document.createElement('li')).innerHTML = resposta[i].preco;
-                    ul.appendChild(document.createElement('li')).appendChild(img).setAttribute('src', resposta[i].imagem);
-
-                    const liBotao = document.createElement('li');
-
-                    const botao = document.createElement('buttton');
-                    botao.type = 'button';
-                    botao.innerHTML = '❌';
-                    botao.classList.add('botao-delete');
-                    botao.value = resposta[i].id;
-
-                    ul.appendChild(liBotao).appendChild(botao);
-
-                    document.querySelector('#listaProdutos').appendChild(ul);
-                }
-
-            });
-
-    </script>
 </body>
 </html>
