--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
 </head>
 
 <body>
-    <h1>Requisição e repostas via API</h1>
+
+    <header>
+        <nav>
+            <div class="parent-box">
+                <div class="header-link">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./create-com-post.html">Create</a></li>
+                    <li><a href="./delete-com-delete.html">Delete</a></li>
+                    <li><a href="./update-com-put.html">Update</a></li>
+                    <li><a href="./read-com-get.html">Read</a></li>
+                    <div>
+                        <h1 class="texto-tema">Tema do site</h1>
+                    </div>
+                    <div id="btn-slider" class="bts bts-base">
+                        <div class="bts bts-slider"></div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div>
+            <h1>Requisição e repostas via API</h1> 
+        </div>
+    </header>
+
     <button type="button" id="btnFetch">Fetch</button>
     <div id="resposta"></div>
+
+    <script src="./assets/scripts/styles.js"></script>
+    <script type="module" src="./assets/scripts/update-com-put.js"></script>
+    <script src="./assets/scripts/botao-slider.js"></script>
 
     <script>
         const requisicao = new Request('http://localhost:3000/produtos', {
