--- a/update-com-put.html
+++ b/update-com-put.html
@@ -15,7 +15,8 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./create-com-post.html">Create</a></li>
                     <li><a href="./delete-com-delete.html">Delete</a></li>
-                    <li><a href="./update-com-put.html">Atualiza</a></li>
+                    <li><a href="./update-com-put.html">Update</a></li>
+                    <li><a href="./read-com-get.html">Read</a></li>
                     <div>
                         <h1 class="texto-tema">Tema do site</h1>
                     </div>
