Páginas Create, Delete, Update e Read Estilizadas

--- a/create-com-post.html
+++ b/create-com-post.html
@@ -32,7 +32,7 @@
     <div id="resposta"></div>
     
     <form action="" method="post">
-        <h1>Alteração de Produtos</h1>
+        <h1>Inserir Produtos</h1>
         <div class="caixa-form">
             <label for="id" class="label-caixa" disabled>ID</label>
             <input type="text" id="id" placeholder="digite o ID do produto"><br>
@@ -60,7 +60,7 @@
     <div id="listaProdutos"></div>
 
     <script src="./assets/scripts/styles.js"></script>
-    <script type="module" src="./assets/scripts/update-com-put.js"></script>
+    <script type="module" src="./assets/scripts/create-com-post.js"></script>
     <script src="./assets/scripts/botao-slider.js"></script>
 
 </body>
