Arrumando erros do Console

--- a/delete-com-delete.html
+++ b/delete-com-delete.html
@@ -30,6 +30,8 @@
             <h1>DELETE com Delete</h1> 
         </div>
     </header>
+
+    <button class="btn-confirmar" type="button" id="btnConfirmar">Apagar selecionados</button>
     
     <div id="listaProdutos"></div>
 
