--- a/read-com-get.html
+++ b/read-com-get.html
@@ -33,7 +33,7 @@
     </header>
 
     <div class="botoes">
-        <button class="bt bt-confirmar" type="button" id="btnFetch">Fetch (buscar)</button>
+        <button class="bt-confirmar" type="button" id="btnFetch">Fetch (buscar)</button>
     </div>
 
     <div id="listaProdutos"></div>
