Ajustando botões das páginas

--- a/update-com-put.html
+++ b/update-com-put.html
@@ -56,7 +56,7 @@
         </div>
 
         <button type="button" id="btnAtualizar" disabled>Atualizar</button>
-        <button type="reset" id="btnCancelar" disabled>Cancelar</button>
+        <button type="reset" id="reset" disabled>Cancelar</button>
 
         
     </form>
