--- a/create-com-post.html
+++ b/create-com-post.html
@@ -53,7 +53,7 @@
         <input type="text" id="imagem" placeholder="digite a imagem do produto"><br>
         </div>
         
-        <button type="button" id="btnCadastrar" disabled>Cadastrar</button>
+        <button type="button" class="btn-cadastrar" id="btnCadastrar" disabled>Cadastrar</button>
         <button type="reset" id="reset" disabled>Cancelar</button>
         
     </form>
