Arrumando os botões com disabled

--- a/delete-com-delete.html
+++ b/delete-com-delete.html
@@ -27,7 +27,7 @@
             </div>
         </nav>
         <div>
-            <h1>DELETE com Delete</h1> 
+            <h1 class="titulo-pagina">DELETE com Delete</h1> 
         </div>
     </header>
 
