--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div>
-            <h1>Requisição e repostas via API</h1> 
+            <h1 class="titulo-pagina">Requisição e repostas via API</h1> 
         </div>
     </header>
 
